--- a/index.html
+++ b/index.html
@@ -37,26 +37,27 @@
 
 
 
-        <!--- Current City Container -->
-        <div class="col-md-9">
-              <div id="current-container">
-                  <!-- Display current weather data here -->
-              </div>
 
-              <div class="row">
-                <!--- 5-day forecast container-->
-                <h3 id="five-day" class="mt-1">5 day Forecast</h3> <br> <br> <br>
-                <div class="col">
-                  <div id="forecast"></div>
-                </div>
-              </div>
-         </div>
 
 
 
 
 
       </div>
+              <!--- Current City Container -->
+              <div class="col-md-9">
+                <div id="current-container">
+                    <!-- Display current weather data here -->
+                </div>
+  
+                <div class="row">
+                  <!--- 5-day forecast container-->
+                  <h3 id="five-day" class="mt-1">5 day Forecast</h3> <br> <br> <br>
+                  <div class="col">
+                    <div class="col" id="forecast"></div>
+                  </div>
+                </div>
+           </div>
     </div>
     
     <!-- JavaScript external document link -->
